test/semantic_errors/invalid_return1.mc
int main() {
    return;  /* missing return value */
}